@@ -3,6 +3,7 @@ python:
 - 3.6
 - 3.7
 - 3.8
+- 3.9
 sudo: false
 install:
 - pip install -U pip nose
