@@ -1,1 +1,3 @@
-Mkhanyisi Madlavana <mmadlavana@gmail.com>	2007-present
+Mkhanyisi Madlavana <mmadlavana@gmail.com>	2007 - 2009
+Mkhanyisi Madlavana <mmadlavana@gmail.com>  2010 - 2019
+Mkhanyisi Madlavana <mmadlavana@gmail.com>  2020 - present
